<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.auth.SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:hint="@string/nama"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:hint="@string/email"/>

        <com.xwray.passwordview.PasswordView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:hint="@string/kata_sandi"/>

        <com.xwray.passwordview.PasswordView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_re_password"
            android:hint="@string/ulangi_kata_sandi"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/daftar_baru"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</FrameLayout>