<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true">

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/linear_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="16sp"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linear_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>

            <com.xwray.passwordview.PasswordView
                android:id="@+id/et_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_saat_ini"/>

            <com.xwray.passwordview.PasswordView
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_baru"/>

            <com.xwray.passwordview.PasswordView
                android:id="@+id/et_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/konfirmasi_password"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/simpan"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_button"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>












