<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berhasil_masuk_keranjang"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/lanjut_pembayaran"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_cart"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/lihat_keranjang"
        android:textColor="@color/colorWhite"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>