<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <com.xwray.passwordview.PasswordView
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kata_sandi"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/pengguna_baru"
                android:layout_margin="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btn_login"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>