<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.glide.slider.library.SliderLayout
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:padding="10dp"/>

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum"
                        android:textSize="22sp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="end"/>

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsumm"
                        android:padding="10dp"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <ImageButton
                    android:layout_weight="1"
                    android:id="@+id/btn_add_cart"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_button"
                    android:src="@drawable/ic_add_cart"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/btn_checkout"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorWhite"
                    android:layout_height="40dp"
                    android:text="@string/beli_sekarang"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>